--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </div>
     <nav>
       <ul>
-        <li><a href="#about">About</a></li>
+        <li><a href="#abouts">About</a></li>
         <li><a href="#features">Features</a></li>
         <li><a href="#pricing">Pricing</a></li>
         <li><a href="#gallery">Gallery</a></li>
